# simple-twitter

./: .gitignore  docker-compose.yml  run.sh
backend/: Dockerfile  app.py  forms.py  run_docker.sh  user.py
backend/templates/: channel.html  login.html  signup.html
data/: queries.data  queries_example.data
engine/: Dockerfile  run_docker.sh
engine/messenger/: CMakeLists.txt  compile_and_run.sh  data.cpp  data.h  main.cpp  utils.cpp  utils.h
images/: Dockerfile  backend.docker  build_images.sh  engine.docker  requirements.txt
